--- a/设计模式.md
+++ b/设计模式.md
@@ -1,6 +1,6 @@
 ### GOF23
 
-创建型模式：用于创建对象
+**创建型模式：用于创建对象**
 
 单例模式、工厂模式、抽象工厂模式、建造者模式、原型模式
 
@@ -310,17 +310,69 @@ spring中创建bean除了singleton之外的另一种模式
 
 
 
+**二、结构型模式：设计对象的结构、继承和依赖关系，从程序结构上实现松耦合**
+
+适配器模式、装饰器模式、代理模式、桥接模式、外观模式、组合模式、享元模式
+
 #### 装饰者模式
 
 想扩展基类的功能，但是又不想增加很多子类或者使子类膨胀，可以采用一个继承基类的装饰类（这样具备核心功能的基类和具备装饰功能的装饰类可以明确分开，便于动态扩展功能，并与核心职责保持独立）
+
+包装器模式与上述类似，包装类（如HttpRequestWrapper）与被包装类（HttpRequest）实现同一个接口（Request），定义包装类时，通过构造方法将被包装类对象作为内部属性持有，按照实际选择修改或新增行为
 
 
 
 #### 代理模式 
 
-在调用基类方法的前后增加一些横切性的业务逻辑，使这些横切逻辑与基类的业务功能独立开来
+在调用基类方法的前后增加一些横切性的业务逻辑，使这些横切逻辑与基类的业务功能独立开来（典型应用为Spring AOP、Spring事务）
 
 
+
+#### 适配器模式
+
+将一个类的接口转换成客户希望的另一个接口（类似于VGA转HDMI、中国插孔转美国插孔等）
+
+**应用场景：**因新的需求而有动机地修改一个原本已正常运行的接口，可考虑适配器模式（装饰者模式是在一个类基础上扩展功能，而不是去修改接口）
+
+目标接口（Target）:客户所期待的接口，可以是具体的类、对象或接口
+
+需要适配的类（Adaptee）：客户无法调用Adaptee中的方法达到某种目的
+
+适配器（Adapter）:包装一个Adaptee，将原接口转换成目标接口
+
+**类适配器：**Adapter同时继承Target和Adaptee，由于java不允许多重继承，可使Adapter实现Target接口，继承已有的Adaptee类
+
+```java
+public class Adapter extends Adaptee implements Target{
+    public void handle(){
+        super.handle();
+        ...//额外的操作
+    }
+}
+//客户使用
+Target target = new Adapter();
+target.handle();
+```
+
+**对象适配器：**Adapter将Adaptee作为成员
+
+```java
+public class Adapter implements Target{
+    private Adaptee adaptee;
+    public Adapter(Adaptee adaptee){
+        this.adaptee = adaptee;
+    }
+    ...
+}
+```
+
+例如，java的io类库中，InputStreamReader实现了Reader接口，并且持有了InputStream的引用，就是一种对象适配器模式，InputStreamReader(InputStream)实现了从字节流到字符流的转化
+
+
+
+**三、行为型模式：设计对象的行为，提高对象之间的协作效率**
+
+策略模式、模板方法模式、观察者模式、迭代子模式、责任链模式、命令模式、备忘录模式、状态模式、访问者模式、中介者模式、解释器模式 
 
 #### 观察者模式（监听器）
 
@@ -383,4 +435,28 @@ public class MyHttpSessionListener implements HttpSessionListener{
 	}
 }
 ```
+
+
+
+#### 策略模式
+
+实现同一个接口(Strategy接口)的多个类，区分它们的只有具体行为，可看成一个算法族，需要哪一个算法时就选择使用哪一个类
+
+**应用场景：** 当类型较多、业务算法较复杂且有些相似时，可用于优化过多的if-else代码
+
+```java
+public class Context{
+    private Strategy strategy;     //将策略接口包含进来    
+    public Context(Strategy strategy){
+      this.strategy = strategy;
+   }
+ 
+   public void executeStrategy(){
+      this.strategy.handle();      //各个实现Strategy接口的类具有不同的具体行为
+   }
+}
+//在具体业务中，只需要一个Context对象，根据传入的具体Strategy实现类来做出不同的行为
+```
+
+
 
