--- a/设计模式.md
+++ b/设计模式.md
@@ -264,11 +264,10 @@ new ConcreteBuilder() --> new Director(aConcreteBuilder)  --> aDirector.buildPar
 public class User{
     private int age;
     private String name;
-    private String address;
     
     //...添加各属性的getter方法，setter方法则在builder中实现
     
-    public static class builder{
+    public static class builder {
         //先创建对象，再一步步装配属性
         private User user = new User();
         
@@ -280,22 +279,21 @@ public class User{
         public Builder setName(String name){
             user.name = name;
             return this;         
-        }
-        
-        public Builder setAddress(int address){
-            user.address = address;
-            return this;          
-        }
+        }     
         
         public User build(){
             return this.user;      //返回装配好属性的user
         }
     }
+    
+    public static Builder builder() {
+        return new Builder();
+    }
 }
 
 public class Client{
     public static void main(String[] args){
-        User user = new User.Builder().serAge(20).setName("John").setAddress("xxx").build();
+        User user = User.builder().setAge(20).setName("John").build();
     } 
 }
 ```
